--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-iconfont": "^4.0.0",
     "gulp-iconfont-css": "0.0.9",
+    "gulp-image-data-uri": "^1.0.0",
     "gulp-svgmin": "^1.2.0",
     "gulp-svgstore": "^5.0.3",
     "gulp-util": "^3.0.6",
