--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-util": "^3.0.6",
     "gulp.spritesmith": "^4.0.0",
     "koa": "^0.21.0",
+    "koa-gzip": "^0.1.0",
     "koa-route": "^2.4.2",
     "koa-static": "^1.4.9",
     "lodash": "^3.10.0",
