--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-svgstore": "^5.0.3",
     "gulp-util": "^3.0.6",
     "gulp.spritesmith": "^4.0.0",
+    "imagemin-pngquant": "^4.1.2",
     "koa": "^0.21.0",
     "koa-gzip": "^0.1.0",
     "koa-route": "^2.4.2",
